Add SHR PoP support to azure core. (#41852)
* migrate APIs to azure core

* integrate identity

* remove setup from core experimental

* update test + fix checkstyle

* Update code + address feedback

* fix module info

* test fix

---------

Co-authored-by: Bill Wert <billwert@microsoft.com>